git-svn-id: http://svn.vdombox.ru/flextools/trunk@8172 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -87,7 +87,7 @@
 			
 			<button:VDOMButton width="48"
 					  icon="@Embed(source='assets/Cancel.png')"
-					  click="{hostComponent.cancel_close_window()}"/>
+					  click="{hostComponent.close()}"/>
 			
 			<button:VDOMButton label="{ resourceManager.getString( 'Wysiwyg_General', 'multiline_window_save' ) }"
 					  click="hostComponent.ok_close_window()" />
