--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
@@ -43,6 +43,7 @@
 			import net.vdombox.powerpack.graph.Node;
 			import net.vdombox.powerpack.lib.extendedapi.containers.tabnavigator.ViewNavigator;
 			import net.vdombox.powerpack.lib.extendedapi.utils.ObjectUtils;
+			import net.vdombox.powerpack.lib.extendedapi.utils.Utils;
 			import net.vdombox.powerpack.lib.player.managers.ContextManager;
 			import net.vdombox.powerpack.lib.player.managers.LanguageManager;
 			import net.vdombox.powerpack.lib.player.popup.AlertPopup;
@@ -1103,6 +1104,22 @@
 			}
 			
 			return resultArray;
+		}
+			
+		public static function get allVariables () : Array
+		{
+			var variables : Array = [];
+			
+			for each (var graph : GraphCanvas in graphs)
+			{
+				variables = variables.concat(graph.allVariables);
+			}
+			
+			variables = Utils.filterArrayUniqueValues(variables);
+			
+			variables.sort();
+			
+			return variables;
 		}
 			
 		]]>
