auto compete -> dialog types
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8180 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/powerpackscript/AssistMenuPopup.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/powerpackscript/AssistMenuPopup.mxml
@@ -17,6 +17,7 @@
 			public static const TITLE_WHOLE_FUNCTIONS		: String = "wholeMethod functions:"
 			public static const TITLE_VARIABLES				: String = "Variables:"
 			public static const TITLE_GRAPHS				: String = "Graphs:"
+			public static const TITLE_DIALOG_TYPES			: String = "Dialog types:"
 			
 			private var _listData : Array;
 			
