--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/powerpackscript/AssistMenuPopup.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/powerpackscript/AssistMenuPopup.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Panel xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:powerpackscript="net.vdombox.powerpack.powerpackscript.*"
-		  removedFromStage="removedFromStageHandler(event)">
+		  removedFromStage="removedFromStageHandler(event)"
+		  borderAlpha="0.8">
 	<mx:Script>
 		<![CDATA[
 			import flash.display.DisplayObjectContainer;
