git-svn-id: http://svn.vdombox.ru/flextools/trunk@8188 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/powerpackscript/AssistMenuPopup.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/powerpackscript/AssistMenuPopup.mxml
@@ -143,6 +143,9 @@
 			
 			public function hideTooltip () : void
 			{
+				if (!assistTooltip)
+					return;
+				
 				assistTooltip.data = "";
 				
 				if (!assistTooltip.isShowing)
