--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -841,6 +841,10 @@
 			var playerObj : Player = new Player();
 			playerObj.isDesktopApplication = true;
 			
+			playerObj.minimizable = false;
+			playerObj.maximizable = false;
+			playerObj.closable = true;
+			
 			playerObj.addEventListener(FlexEvent.CREATION_COMPLETE, playerCreationCompleteHandler);
 			playerObj.addEventListener(Event.CLOSE, playerCloseHandler);
 			
