git-svn-id: http://svn.vdombox.ru/flextools/trunk@8199 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
@@ -113,10 +113,8 @@
 				}
 				else
 				{
-					if ( hostComponent.data is ClientActionVO )
+					if ( hostComponent.data is ClientActionVO || hostComponent.data is ServerActionVO )
 						titleLabel.text = headerGroup.toolTip = hostComponent.data.objectName + ":" + hostComponent.data.name;
-					else if ( hostComponent.data is ServerActionVO )
-						titleLabel.text = headerGroup.toolTip = hostComponent.data.name;
 					
 					if ( creationCompleted  )
 						setLayout(false);
