--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/controlbar/GraphEditorControlBar.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/controlbar/GraphEditorControlBar.mxml
@@ -11,6 +11,8 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.powerpack.graph.GraphCanvas;
+			import net.vdombox.powerpack.graph.Node;
+			import net.vdombox.powerpack.lib.player.graph.NodeCategory;
 			import net.vdombox.powerpack.lib.player.managers.ContextManager;
 			
 			public static const DESTINATION_OBJECT_GRAPH_CANVAS		: String = "graph_canvas";
@@ -56,20 +58,6 @@
 				dispatchEvent(evt);
 			}
 			
-			public function updateButtonsState (graphsCount : int) : void
-			{
-				if (graphsCount <= 0)
-				{
-					if (!locked)
-						lock();
-				}
-				else
-				{
-					if (locked)
-						unlock();
-				}
-			}
-			
 			private var locked : Boolean;
 			
 			private function lock () : void
@@ -92,6 +80,63 @@
 				}
 				
 				locked = false;
+			}
+			
+			public function updateButtonsState (graph : GraphCanvas) : void
+			{
+				lock ();
+				
+				if (!graph)
+					return;
+				
+				var selectedNodesAmount : int = graph.selectedNodesAmount;
+				var selectedArrowsAmount : int = graph.selectedArrowsAmount;
+				
+				btnClear.enabled = true;
+				
+				btnNewNormalState.enabled = true;
+				btnNewCommandState.enabled = true;
+				btnNewSubgraphState.enabled = true;
+				
+				if (selectedArrowsAmount == 1)
+				{
+					if (graph.selectedArrow && graph.selectedArrow.label)
+						btnEditTransition.enabled = true;
+					
+					btnDelete.enabled = true;
+				}
+				
+				if (selectedNodesAmount == 0)
+				{
+					if ( Clipboard.generalClipboard.hasFormat( GraphCanvas.CLIPBOARD_GRAPH_FORMAT ) )
+						btnPaste.enabled = true;
+				} 
+				else if (selectedNodesAmount > 0)
+				{
+					btnCut.enabled = true;
+					btnCopy.enabled = true;
+					btnPaste.enabled = true;
+					btnDelete.enabled = true;
+					
+					btnConvertToNormal.enabled = true;
+					btnConvertToCommand.enabled = true;
+					btnConvertToSubgraph.enabled = true;
+					
+					btnToggleBreakpoint.enabled = true;
+					btnTerminalNode.enabled = true;
+					
+					if (selectedNodesAmount == 1)
+					{
+						btnAddTransition.enabled = true;
+						btnInitialNode.enabled = true;
+						
+						var selectedNode : Node = graph.selectedNodes[0];
+						
+						if (selectedNode.category == NodeCategory.SUBGRAPH)
+							btnJump.enabled = true;
+					}
+				}
+					
 			}
 			
 		]]>
