enable/disable control bar btns
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8204 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
@@ -147,7 +147,7 @@
 			
 		private function viewStack_childRemoveHandler (event : ChildExistenceChangedEvent) : void
 		{
-			if (numChildren == 1)
+			if (vsViewStack.numChildren <= 1)
 				graphEditorControlBar.updateButtonsState(null);
 				
 		}
