--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/AddProduct.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/AddProduct.mxml
@@ -20,6 +20,8 @@
 	</mx:Style>
 	<mx:Script>
 		<![CDATA[
+			import net.vdombox.helpeditor.view.HTML_WYSIWYG;
+			import net.vdombox.helpeditor.model.SQLProxy;
 			import mx.collections.ArrayCollection;
 			import mx.controls.CheckBox;
 			import mx.controls.Label;
