--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/HTML_WYSIWYG.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/HTML_WYSIWYG.mxml
@@ -7,6 +7,12 @@
 	
 	<mx:Script>
 		<![CDATA[
+			import net.vdombox.helpeditor.utils.ResourceUtils;
+			import net.vdombox.helpeditor.model.HtmlPageProperties;
+			import net.vdombox.helpeditor.controller.PageToc;
+			import net.vdombox.helpeditor.model.WysiwygImage;
+			import net.vdombox.helpeditor.utils.Utils;
+			import net.vdombox.helpeditor.controller.ClipboardManager;
 			import com.adobe.images.PNGEncoder;
 			
 			import mx.controls.Alert;
