--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/EditPage.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/EditPage.mxml
@@ -20,6 +20,9 @@
 	</mx:Style>
 	<mx:Script>
 		<![CDATA[
+			import net.vdombox.helpeditor.view.HTML_WYSIWYG;
+			import net.vdombox.helpeditor.model.SQLProxy;
+			import net.vdombox.helpeditor.utils.Utils;
 			import mx.collections.ArrayCollection;
 			import mx.controls.CheckBox;
 			import mx.events.CloseEvent;
