--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/EditProduct.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/EditProduct.mxml
@@ -20,6 +20,7 @@
 	</mx:Style>
 	<mx:Script>
 		<![CDATA[
+			import net.vdombox.helpeditor.model.SQLProxy;
 			import mx.collections.ArrayCollection;
 			import mx.controls.CheckBox;
 			import mx.managers.PopUpManager;
