refactoring: add folders
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8212 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -47,7 +47,7 @@
 			import mx.utils.UIDUtil;
 			import mx.validators.StringValidator;
 			
-			import spinnerFolder.SpinnerPopUpManager;
+			import net.vdombox.helpeditor.controller.SpinnerPopUpManager;
 
 			private var sqlProxy : SQLProxy = new SQLProxy();
 
