--- a/Help/Reader/v.01/src/net/vdombox/helpreader/view/spinner/SpinnerPopUp.mxml
+++ b/Help/Reader/v.01/src/net/vdombox/helpreader/view/spinner/SpinnerPopUp.mxml
@@ -2,11 +2,12 @@
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" 
 				creationComplete="creationCompleteHandler(event)"
 				backgroundColor="black"
-				backgroundAlpha="0.3" xmlns:local="*" xmlns:spinnerFolder="spinnerFolder.*"
+				backgroundAlpha="0.3" xmlns:local="*" xmlns:spinner="net.vdombox.helpreader.view.spinner.*"
 				alpha="0">
 	
 	<mx:Script>
 		<![CDATA[
+			import net.vdombox.helpreader.controller.SpinnerPopUpManager;
 			import mx.effects.Tween;
 			import mx.events.CloseEvent;
 			import mx.events.FlexEvent;
@@ -48,7 +49,7 @@
 			{
 				this.alpha = value;
 				
-				spinner.rotateImage();
+				spinnerImage.rotateImage();
 				
 				this.dispatchEvent(new Event(SpinnerPopUpManager.EVENT_SPINNER_WINDOW_ADDED));
 			}
@@ -57,7 +58,7 @@
 			{
 				this.alpha = value;
 				
-				spinner.stopRotateImage();
+				spinnerImage.stopRotateImage();
 				
 				this.dispatchEvent(new Event(SpinnerPopUpManager.EVENT_SPINNER_WINDOW_HIDE));
 			}
@@ -84,7 +85,7 @@
 			 verticalAlign="middle" horizontalAlign="center"
 			 verticalGap="-1">
 		
-		<spinnerFolder:SpinnerImage id="spinner"
+		<spinner:SpinnerImage id="spinnerImage"
 									width="20" height="20" 
 									source="@Embed('assets/spinner.png')"
 									maintainAspectRatio="true"
